objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Ori_Plast_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Billing_Address__c</fullName>
        <description>This is the text field getting value from JSON Data of the staging record.</description>
        <label>Dealer Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_GST__c</fullName>
        <description>This is the text field getting value from JSON Data of the staging record.</description>
        <label>Dealer GST</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Identification_Key__c</fullName>
        <description>This field stores the Identification key of dealer value coming from the staging record&apos;s JSON Payload field.</description>
        <label>Dealer Identification Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <description>This is the text field getting value from JSON Data of the Staging Record</description>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Zone__c</fullName>
        <description>This is the text field getting value from JSON Data of the staging record.</description>
        <label>Dealer Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Distributor)</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Invoice_Value__c</fullName>
        <label>Final Invoice Value</label>
        <summarizedField>Invoice_Line_Item__c.Final_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Ori_Plast_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_Formatted__c</fullName>
        <formula>IF(LEN(Invoice_Date__c) == 9,
DATE(
VALUE(&apos;20&apos;+RIGHT( Invoice_Date__c , 2)),
CASE(MID(Invoice_Date__c, 4 , 3),
&quot;Jan&quot;,01,
&quot;Feb&quot;,02,
&quot;Mar&quot;,03,
&quot;Apr&quot;,04,
&quot;May&quot;,05,
&quot;Jun&quot;,06,
&quot;Jul&quot;,07,
&quot;Aug&quot;,08,
&quot;Sep&quot;,09,
&quot;Oct&quot;,10,
&quot;Nov&quot;,11,
12
),
VALUE(LEFT(Invoice_Date__c, 2))
),
DATE(
VALUE(&apos;20&apos;+RIGHT( Invoice_Date__c , 2)),
CASE(MID(Invoice_Date__c, 3 , 3),
&quot;Jan&quot;,01,
&quot;Feb&quot;,02,
&quot;Mar&quot;,03,
&quot;Apr&quot;,04,
&quot;May&quot;,05,
&quot;Jun&quot;,06,
&quot;Jul&quot;,07,
&quot;Aug&quot;,08,
&quot;Sep&quot;,09,
&quot;Oct&quot;,10,
&quot;Nov&quot;,11,
12
),
VALUE(LEFT(Invoice_Date__c, 1))
)
)</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Invoice External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>External unique Id coming from JSON.</description>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Invoice_Quantity__c</fullName>
        <description>This field store Total Quantity from its child Invoice Line Items</description>
        <label>Total Invoice Quantity</label>
        <summarizedField>Invoice_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Ori_Plast_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>